--- a/package.json
+++ b/package.json
@@ -12,15 +12,30 @@
     "install": "cd client && npm install",
     "client": "cd client && npm start"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZainKhawaja98/challenge-19-text-editor.git"
+   },
   "keywords": [],
-  "author": "Zain Khawaja",
+  "author": "",
   "license": "ISC",
+  "bugs": {
+   "url": "https://github.com/ZainKhawaja98/challenge-19-text-editor/issues"
+  },
+  "homepage": "https://github.com/ZainKhawaja98/challenge-19-text-editor#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+   "babel": "^6.23.0",
+   "concurrently": "^5.2.0",
+   "express": "^4.18.2",
+   "idb": "^7.1.1",
+   "node": "^19.6.0",
+   "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+   "css-loader": "^6.7.3",
+   "webpack": "^5.75.0",
+   "webpack-cli": "^5.0.1",
+   "webpack-dev-server": "^4.11.1",
+   "webpack-pwa-manifest": "^4.3.0"
   }
-}
+ }
